tests/invalid/foreign_decl_line_number.err_exp3
foreign_decl_line_number.m:24:2: error: #error Error in foreign decl
foreign_decl_line_number.m:28:2: error: #error Error in foreign code
foreign_decl_line_number.m:44:2: error: #error Error in foreign proc
